Added generated files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,39 @@ target
 /.project
 /.settings
 /RUNNING_PID
+.bloop/bloop.settings.json
+.bloop/root-test.json
+.bloop/root.json
+.g8/form/default.properties
+.g8/form/app/controllers/$model__Camel$Controller.scala
+.g8/form/app/views/$model__camel$/form.scala.html
+.g8/form/conf/routes
+.g8/form/test/controllers/$model__Camel$ControllerSpec.scala
+.metals/metals.lock.db
+.metals/metals.log
+.metals/metals.mv.db
+.metals/.reports/metals-full/2023-10-02/r_compiler-error_16-51-07-171
+.metals/.reports/metals-full/2023-10-02/r_compiler-error_16-51-08-329
+.metals/.reports/metals-full/2023-10-02/r_compiler-error_16-51-35-732
+.metals/.reports/metals-full/2023-10-02/r_compiler-error_16-51-37-352
+.metals/.reports/metals-full/2023-10-02/r_compiler-error_16-51-40-720
+.metals/.reports/metals-full/2023-10-02/r_compiler-error_16-51-43-451
+.metals/.reports/metals-full/2023-10-02/r_compiler-error_16-51-44-851
+.metals/.reports/metals-full/2023-10-02/r_compiler-error_16-51-46-571
+.metals/.reports/metals-full/2023-10-02/r_compiler-error_16-51-46-922
+.metals/.reports/metals-full/2023-10-02/r_compiler-error_16-51-48-364
+.metals/.reports/metals-full/2023-10-02/r_compiler-error_22-56-34-195
+.metals/.reports/metals-full/2023-10-04/r_compiler-error_16-09-09-835
+.metals/.reports/metals-full/2023-10-04/r_compiler-error_16-09-26-265
+.metals/.reports/metals-full/2023-10-04/r_compiler-error_16-14-02-834
+.vscode/settings.json
+conf/logback.xml
+conf/messages
+project/metals.sbt
+project/plugins.sbt
+project/.bloop/bloop.settings.json
+project/.bloop/test-scala-play-build.json
+project/project/metals.sbt
+project/project/.bloop/bloop.settings.json
+project/project/.bloop/test-scala-play-build-build.json
+project/project/project/metals.sbt
